Embedded worker, client, cluster with HBase and ZooKeeper support, cleanup, re-org
Limit the number of snapshots to 2880